<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Mark Scanner</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="invalid_username">Enter username</string>
    <string name="invalid_password">Enter password</string>

    <string name="verify_scanned_data">Verify scanned data</string>
    <string name="complete_these_steps_to_submit_marks">Complete these steps to submit marks</string>
    <string name="verify_subject_details">Verify Subject Details</string>
    <string name="verify_marks_subject">Verify Marks &amp; Subject</string>

    <string name="student_details">Student details</string>
    <string name="class_text">Class</string>
    <string name="roll_no">Roll No.</string>
    <string name="marks">Marks</string>
    <string name="edit">EDIT</string>
    <string name="summary">summary</string>
    <string name="submit">Submit</string>

    <string name="booklet_id">Booklet ID</string>
    <string name="student_id">Student ID</string>
    <string name="test_id">Test ID</string>
    <string name="test_date">Test Date</string>
    <string name="subject">Subject</string>
    <string name="next">NEXT</string>
    <string name="colon">:</string>
    <string name="no_tests_for_given_date">No tests  for given date</string>
    <string name="please_correct_the_student_id">Please correct the Student Id</string>
    <string name="scanned_data_summary">Scanned data summary</string>
    <string name="total_marks">Total Marks</string>
    <string name="total_marks_secured">Total marks secured</string>
    <string name="welcome_to">Welcome to</string>
    <string name="answer_paper_scanner">Answer Paper Scanner</string>
    <string name="gujarat">Gujarat</string>
    <string name="provide_your_details_to_start_scanning">Provide your details to \n start scanning the mark sheets</string>
    <string name="proceed">Proceed</string>
    <string name="underscore">-</string>
    <string name="my_scans">My Scans</string>
    <string name="logout">Logout</string>
    <string name="scan_the_mark_sheet">Scan The Mark Sheet</string>
    <string name="uploading_image">Uploading image…</string>
    <string name="please_wait_while_we_scan_the_picture">Please wait, while we scan the picture</string>
    <string name="scanning_complete">Scanning Complete!</string>
</resources>
