<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle_background">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/welcome_to"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_xlarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_small"
            android:text="@string/answer_paper_scanner"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_xlarge"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/underscore"
                android:textColor="@color/black"
                android:textSize="@dimen/text_xlarge"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:text="@string/gujarat"
                android:textColor="@color/black"
                android:textSize="@dimen/text_xlarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/underscore"
                android:textColor="@color/black"
                android:textSize="@dimen/text_xlarge"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/dikshalogo" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/provide_your_details_to_start_scanning"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonProceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_xsmall"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="@dimen/margin_xsmall"
            android:backgroundTint="@color/orange"
            android:paddingTop="@dimen/spacing_large"
            android:paddingBottom="@dimen/spacing_large"
            android:text="@string/proceed"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            app:cornerRadius="5dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
