<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/spacing_large"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large">

    <ScrollView
        android:id="@+id/scrollViewContentHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linearBottomHolder"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/student_id"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/editStudentId"
                    style="@style/BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/test_id"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/textNoTestId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/no_tests_for_given_date"
                        android:textColor="@color/red"
                        android:visibility="gone"/>
                </RelativeLayout>

                <EditText
                    android:id="@+id/editTestId"
                    style="@style/EditTextWithDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_date"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/editExamDate"
                    style="@style/BaseEditTextDisabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="date" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearBottomHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            app:strokeColor="@color/colorGray_20"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/linearEditNextHolder"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEditSubject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:backgroundTint="@color/colorGray"
            android:text="@string/edit"
            android:textColor="@color/black"
            app:icon="@drawable/ic_edit"
            app:iconTint="@color/black" />

        <View
            android:layout_width="40dp"
            android:layout_height="30dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMoveNext"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            android:textColor="@color/orange"
            app:strokeColor="@color/orange" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>