<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/verify_scan_data_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGray_40"
        android:padding="@dimen/spacing_large"
        android:text="@string/scanned_data_summary"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        android:orientation="vertical"
        android:padding="@dimen/spacing_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify_scan_data_header">


        <LinearLayout
            android:id="@+id/linearContentHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/student_details"
                android:textSize="@dimen/text_small"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.2">

                    <TextView
                        android:id="@+id/textSummaryStudentFirstLetter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_shape"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:orientation="vertical"
                    android:paddingStart="10dp">

                    <TextView
                        android:id="@+id/textSummaryStudentName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="student name"
                        android:textAllCaps="true"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/student_id"
                            android:textSize="@dimen/text_small" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="2dp"
                            android:paddingEnd="5dp"
                            android:text="@string/colon"
                            android:textSize="@dimen/text_small" />

                        <TextView
                            android:id="@+id/textSummaryStudentId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_small" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/test_id"
                            android:textSize="@dimen/text_small" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="2dp"
                            android:paddingEnd="5dp"
                            android:text="@string/colon"
                            android:textSize="@dimen/text_small" />

                        <TextView
                            android:id="@+id/textSummaryTestId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_small" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="#efefef" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_marks"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="2dp"
                        android:paddingEnd="10dp"
                        android:text="@string/colon"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:id="@+id/textTotalMarks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_small" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_marks_secured"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="2dp"
                        android:paddingEnd="5dp"
                        android:text="@string/colon"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:id="@+id/textTotalMarksSecured"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_small" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearContentHolder"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEditSummary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:backgroundTint="@color/colorGray"
                android:text="@string/edit"
                android:textColor="@color/black"
                app:icon="@drawable/ic_edit"
                app:iconTint="@color/black" />

            <View
                android:layout_width="40dp"
                android:layout_height="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSummarySubmit"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/submit"
                android:textColor="@color/white" />
        </LinearLayout>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
